# mod-api

./: .pre-commit-config.yaml  .release-it.json  Dockerfile  IMPLEMENTATION_PROGRESS.md  README.md  docker-bake.hcl  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer-bake.hcl  devcontainer.json  initialize
.github/: settings.yml
.github/workflows/: push-workflow.yaml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/search/: search_index.json
main/: 404.html  index.html  sitemap.xml
site/: objects.inv
src/: __init__.py
src/mod_api/: __init__.py  main.py  upcoming_commands.md
src/mod_api/api/: __init__.py  dependencies.py
src/mod_api/api/routes/: __init__.py  connections.py  (+4 more)
src/mod_api/effects/: __init__.py  registry.py
src/mod_api/models/: __init__.py  connection.py  effect_info.py  effect_instance.py  parameter.py  pedalboard.py  port.py
src/mod_api/storage/: __init__.py  pedalboard_store.py
src/mod_api/utils/: __init__.py  mod_host_client.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_client.py  mod_api.py  mod_host.py  mod_host_mock.py
tests/integration/: conftest.py  test_pedalboard_api.py
tests/resources/: docker-compose.mod-host.yaml
tests/unit/: conftest.py  test_connection_endpoints.py  test_effect_instances_endpoints.py  test_effects_endpoints.py  test_main.py  test_mod_host_client.py  test_parameter_endpoints.py  test_pedalboard_endpoints.py  test_pedalboard_store.py  test_placeholder.py  test_registry.py
(+5 files in other folders)
