[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mod-api"
version = "0.2.0"
description = "REST API for the MOD audio mod-host service."
authors = [
    { name = "rcwbr" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mike>=2.2.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
    "pytest-cov>=7.0.0",
    "uv>=0.11.7"
]

[tool.setuptools.packages.find]
where = ["src"]
